--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-numpy==1.24.3
-scikit-learn==1.3.0
-pandas==2.0.3
-joblib==1.3.2
-pydantic==2.5.0
+fastapi
+uvicorn
+scikit-learn
+lightgbm
+pandas
+joblib
+pydantic
